Spacing Issue

--- a/css/references.css
+++ b/css/references.css
@@ -45,7 +45,7 @@
 .img3 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 775px;
+  top: 750px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -65,14 +65,13 @@
 .img4 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 1150px;
+  top: 975px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
 }
 
 .container4 {
-  position: relative;
   font-color: black;
   left: 10px;
   top: 975px;
